# dnd5e

./: .gitignore  CLAUDE.md  OVERVIEW.md  main.py  pyproject.toml
data/campaigns/Daggerfall/: meta.json  players.json  world.yaml
data/corpus/: 5e D&D Basic Rules.md  Candlekeep Mysteries.md  D&D 5E - Monster Manual.md  D&D 5e - Sword Coast Adventurer's Guide.md  DnD 5e Players Handbook.md  Dungeon Masters Guide (5e).md  Lost Mine of Phandelver.md
data/worlds/: MyAdventure.yaml
docs/: high-level-architecture.md  requirements.md
src/: __init__.py
src/backend/: main.py
src/backend/api/: admin_routes.py  auth_routes.py  campaign_routes.py  routes.py  ws_routes.py
src/backend/core/: __init__.py  ai_client.py  auth.py  campaign_io.py  campaign_manager.py  config.py  graph_store.py  tools.py  vector_store.py
src/backend/models/: __init__.py  game.py  player.py  user.py  world.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/frontend/src/: App.vue  main.js
src/frontend/src/assets/css/: main.css
src/frontend/src/components/: ActionBar.vue  CharacterCreator.vue  ChatWindow.vue  NavBar.vue  PlayerCard.vue
src/frontend/src/router/: index.js
src/frontend/src/stores/: auth.js  campaign.js
src/frontend/src/views/: AdminView.vue  AdminWorldView.vue  CampaignsView.vue  GameView.vue  HomeView.vue  LobbyView.vue  LoginView.vue  WelcomeView.vue
